--- a/admin/package.json
+++ b/admin/package.json
@@ -1,4 +1,4 @@
-{
+ {
   "name": "admin",
   "private": true,
   "version": "0.0.0",
@@ -12,7 +12,10 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-easy-crop": "^5.1.0",
+    "react-paginate": "^8.2.0",
+    "react-router-dom": "^6.26.1",
+    "sweetalert2": "^11.14.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
